--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,6 @@
 [project]
-name = "1"
+name = "tlipob-importer"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "easyocr>=1.7.2",
