--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pyright>=1.1.400",
     "pytest>=9.0.2",
     "ruff>=0.15.1",
 ]
+
+[tool.pyright]
+typeCheckingMode = "strict"
+pythonVersion = "3.14"
+venvPath = "."
+venv = ".venv"
