bigger and better

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dev = [
     "ruff>=0.15.1",
 ]
 
+[tool.pytest.ini_options]
+pythonpath = ["."]
+
 [tool.pyright]
 typeCheckingMode = "strict"
 pythonVersion = "3.12"
